# desafio-back-end-ecompjr

./: database.py  pyproject.toml
app/: app.py  database.py
app/models/: empresa.py
app/routers/: empresas.py
app/schemas/: schemas.py
tests/: test_db.py
